--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-   "server":"json-server --watch db.json --port 3001",
+    "dev": "npx json-server --watch db.json --port 3001 && vite",
+    "build": " vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.14",
@@ -26,7 +26,9 @@
     "react-table": "^7.8.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "json-server": "^0.17.4"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -42,6 +44,8 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "json-server": "^0.17.4"
+
   }
 }
