--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\"",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\"",
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.14",
