--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\"",
+    "start": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\""
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.14",
