--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\"",
+ "scripts": {
+    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\""
+    "start": "vite preview"
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.14",
