--- a/package.json
+++ b/package.json
@@ -3,29 +3,41 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "start": "vite preview"
+  "scripts": {
+    "dev": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\"",
+    "build": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite build\"",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\""
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.14",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "json-server": "^0.17.4",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-google-fonts": "^1.2.1",
     "react-table": "^7.8.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "json-server": "^0.17.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -34,14 +46,15 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "json-server": "^0.17.4",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1",
-    "json-server": "^0.17.4"
+    "vite": "^5.4.1"
   }
 }
