--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\"",
-    "build": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite build\"",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "concurrently \"npx json-server --watch db.json --port 3001\" \"vite\""
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview"
+
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.14",
